# bassel-math

./: Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
static/: index.css
templates/: index.html
